Removed dynamic payload concepts, removed intermediary USDZ conversion, UX now prints what exists in 'extras' field on GLTF file

--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,11 @@ env.bak/
 # Generated Files
 *.glb
 *.gltf
+*.usdz
+Scenes/Assets/
 Scenes/*.glb
 Scenes/*.gltf
+Scenes/*.usdz
 
 # IDE & Editor Files
 .vscode/
