--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
   "name": "dynamic-usd-payloads-with-babylon",
   "version": "1.0.0",
-  "description": "",
+  "description": "Dynamic USD/USDZ payloads with Babylon.js visualization",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
-  "keywords": [],
+  "keywords": [
+    "usd",
+    "usdz",
+    "babylon",
+    "3d",
+    "visualization",
+    "dynamic",
+    "payloads"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "ws": "^8.18.3"
   }
 }
